# fit-check

./: .env.example  .gitignore  CLAUDE.md  OPERATIONS.md  PROJECT_BRIEF.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: commit.md  deploy.md
docker/: .env.docker.example  Dockerfile  README.md  dev.sh  docker-compose.yml  docker-entrypoint.sh
scripts/: capture_fixtures.py  preview_chart.py
src/fitness/: __main__.py  config.py
src/fitness/ai/: claude_client.py  whisper_client.py
src/fitness/analysis/: bonk.py  galloway.py  heart_rate.py  pace.py  run_report.py  segments.py  timeseries.py  workout_classifier.py
src/fitness/api/: main.py
src/fitness/api/routes/: activities.py  sync.py
src/fitness/bot/: app.py  handlers.py  voice_handler.py
src/fitness/db/: engine.py  migrations.py
src/fitness/garmin/: auth.py  client.py  fit_parser.py  normalizer.py  sync_service.py
src/fitness/models/: activity.py  sync.py  wellness.py
src/fitness/prompts/: charts.py  debrief.py  trends.py  voice.py
src/fitness/scheduler/: jobs.py
src/fitness/scripts/: backfill.py  setup.py
tests/: conftest.py
tests/bot/: test_handlers.py  test_voice_handler.py
tests/fixtures/: garmin_activity_list_item.json  garmin_activity_splits.json  garmin_activity_summary.json  garmin_hrv.json  garmin_sleep.json  garmin_typed_splits.json  garmin_workout.json  sample_activity.fit
tests/integration/: test_api_activities.py  test_api_sync.py  test_sync_service.py
tests/unit/: test_backfill.py  test_bonk.py  test_claude_client.py  test_fit_parser.py  test_galloway.py  test_garmin_auth.py  test_garmin_client.py  test_heart_rate.py  test_lap_charts.py  test_lap_segments.py  test_migrations.py  test_models.py  test_normalizer.py  test_pace.py  test_prompts.py  test_run_report.py  test_scheduler.py  test_segment_aware_bonk.py  test_segments.py  test_timeseries.py  test_whisper_client.py  test_workout_classifier.py
