[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "garminconnect==0.1.55",  # last version supporting Python 3.9
    "fitparse>=1.2.0",
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.21",
    "aiosqlite==0.20.0",
    "python-telegram-bot[job-queue]==21.10",
    "anthropic==0.77.0",
    "openai==1.65.4",
    "APScheduler==3.10.4",
    "pydantic-settings==2.8.1",
    "httpx>=0.25.0,<1.0",
    "matplotlib==3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "freezegun>=1.5.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
